Fix production API URL to point to Render backend

--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -1,4 +1,4 @@
 # Production Environment Variables
-# Backend is now deployed on Vercel
+# Backend is deployed on Render
 
-VITE_API_URL=https://footy-oracle-backend.vercel.app
+VITE_API_URL=https://footy-oracle-backend.onrender.com
