--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,10 +23,10 @@
     "axios": "^1.6.2",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
-    "tsx": "^4.7.0",
     "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
