--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
