--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "footy-oracle-v2",
   "version": "1.0.0",
   "private": true,
-  "description": "AI-powered sports betting platform with Golden Bets and predictions",
+  "description": "AI-powered football betting platform with Golden Bets, Value Bets, Fixtures, and AI reasoning",
   "workspaces": [
     "apps/frontend",
     "apps/backend"
   ],
   "scripts": {
+    "dev": "npm run dev:frontend",
     "dev:frontend": "cd apps/frontend && npm run dev",
     "dev:backend": "cd apps/backend && npm run dev",
+
+    "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd apps/frontend && npm run build",
     "build:backend": "cd apps/backend && npm run build",
-    "build": "npm run build:frontend && npm run build:backend",
+
     "install:all": "npm install && cd apps/frontend && npm install && cd ../backend && npm install"
   },
   "repository": {
