--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,7 +23,8 @@
     "axios": "^1.6.2",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "tsx": "^4.7.0",
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
+    "@types/ws": "^8.5.10",
     "typescript": "^5.3.3"
   },
   "engines": {
