🔧 Force Vercel rebuild - change install command to npm install

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "buildCommand": "cd apps/frontend && npm ci && npm run build",
+  "buildCommand": "cd apps/frontend && npm install && npm run build",
   "outputDirectory": "apps/frontend/dist",
-  "installCommand": "cd apps/frontend && npm ci",
-  "framework": "vite"
+  "installCommand": "cd apps/frontend && npm install",
+  "framework": "vite",
+  "github": {
+    "silent": false
+  }
 }
