📝 Add missing API_FOOTBALL_KEY and MONGODB_URI to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 # OpenAI API Configuration
 OPENAI_API_KEY=sk-proj-your-key-here
 
+# API-Football Configuration (REQUIRED for real fixtures)
+API_FOOTBALL_KEY=your-api-football-key-here
+API_FOOTBALL_BASE_URL=https://v3.football.api-sports.io
+
+# MongoDB Configuration (REQUIRED)
+MONGODB_URI=mongodb://localhost:27017/footy-oracle
+
 # Application Configuration
 NODE_ENV=development
 
