--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,10 +24,10 @@
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
     "mongoose": "^8.0.3",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
-    "tsx": "^4.7.0",
     "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
