--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,7 +25,8 @@
     "openai": "^4.20.1",
     "mongoose": "^8.0.3",
     "ws": "^8.16.0",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
