--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src --ext .ts",
     "test": "jest",
     "test:fixtures": "tsx test-fixtures.ts",
+    "test:endpoints": "tsx test-fixtures-endpoints.ts",
     "test:api": "tsx test-api-integration.ts api",
     "test:db": "tsx test-api-integration.ts db",
     "test:all": "tsx test-api-integration.ts all",
