--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
   "name": "footy-oracle-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsx apps/backend/src/server.ts"
+    "start": "tsx src/server.ts"
   },
   "dependencies": {
     "axios": "^1.6.7",
