--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "tsx": "^4.0.0"
+    "tsx": "^4.0.0",
+    "openai": "^4.58.1"
   }
 }
