--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "tsx": "^4.0.0",
-    "openai": "^4.58.1"
+    "openai": "^4.58.1",
+    "node-cron": "^3.0.3"
   }
 }
