✅ Add seeding scripts to package.json
- Add seed:fixtures script for easy seeding
- Add seed:fetch script for quick daily fetch
- Part of rebuild plan #66

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,9 @@
   "name": "footy-oracle-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsx src/server.ts"
+    "start": "tsx src/server.ts",
+    "seed:fixtures": "tsx src/scripts/seedFixtures.ts",
+    "seed:fetch": "tsx src/scripts/fetchFixtures.ts"
   },
   "dependencies": {
     "axios": "^1.6.7",
