🔧 Add test:db script to package.json
- Add test:db script for database diagnostics
- Helps verify connection and data before deployment
- Part of fixing #66

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,6 +5,7 @@
     "start": "tsx src/server.ts",
     "build": "echo 'No build needed - using tsx for runtime TypeScript' && exit 0",
     "test": "echo \"No tests configured yet\" && exit 0",
+    "test:db": "tsx src/scripts/testConnection.ts",
     "seed:fixtures": "tsx src/scripts/seedFixtures.ts",
     "seed:fetch": "tsx src/scripts/fetchFixtures.ts"
   },
