--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -1,4 +1,4 @@
 # Production Environment Variables
 # Backend is deployed on Render
 
-VITE_API_URL=https://footy-oracle-backend.onrender.com/api
+VITE_API_URL=https://footy-oracle-backend.onrender.com
