📝 Add ML_API_URL to backend environment variables
- Document ML_API_URL configuration
- Provide local and production examples
- Part of Issue #142 (Backend → ML Engine URL fix)

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -13,7 +13,12 @@ OPENAI_MODEL=gpt-4
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/footy-oracle
 
-# ML Model Configuration
+# ML API Configuration
+# Local development: http://localhost:8000
+# Production: Set to your deployed ML API URL (e.g., https://your-ml-api.onrender.com)
+ML_API_URL=http://localhost:8000
+
+# ML Model Configuration (Legacy - kept for backwards compatibility)
 ML_MODEL_PATH=../../shared/ml_outputs/predictions.json
 
 # CORS Configuration
