Add VITE_API_BASE_URL to env example for frontend configuration

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ NODE_ENV=development
 API_PORT=3000
 API_HOST=localhost
 
+# Frontend API Configuration (REQUIRED for Vercel deployment)
+VITE_API_BASE_URL=https://footy-oracle-backend.onrender.com
+
 # Database Configuration (if needed)
 DATABASE_URL=your-database-url-here
 
