--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,7 +1,7 @@
 # Environment Variables for Frontend
 
 # Backend API URL
-VITE_API_URL=http://localhost:3001
+VITE_API_BASE_URL=http://localhost:3001
 
-# For production, set to your Railway backend URL:
-# VITE_API_URL=https://your-backend.railway.app
+# For production, set to your Render backend URL:
+# VITE_API_BASE_URL=https://footy-oracle-backend.onrender.com
