--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,27 +1,32 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "lib": ["ES2022"],
-    "moduleResolution": "node",
-    "outDir": "./dist",
-    "rootDir": "./src",
-
+    "target": "ES2020",
+    "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
-    "noEmitOnError": false,
-
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/server.ts",
+    "src/routes/**/*",
+    "src/services/**/*",
+    "src/utils/**/*",
+    "src/middleware/**/*"
+  ],
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "src/services/mlService_backup_before_raw.ts",
+    "src/cron/mlPredictionsCron.ts",
+    "src/cron/mlPredictionsCron.js",
+    "src/services/betBuilderImporter.ts",
+    "src/services/bettingInsightsService.ts",
+    "src/services/fixtureExportService.ts",
+    "src/services/pnlTrackingService.ts",
+    "src/services/trebleService.ts",
+    "src/services/websocket.ts"
+  ]
 }
