--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,25 +1,23 @@
 {
   "name": "footy-oracle-backend",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "tsx src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "tsx watch src/server.ts",
-    "test": "echo \"No tests configured yet\" && exit 0",
-    "test:db": "tsx src/scripts/testConnection.ts",
-    "seed:fixtures": "tsx src/scripts/seedFixtures.ts",
-    "seed:fetch": "tsx src/scripts/fetchFixtures.ts"
+    "start": "node dist/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "tsx": "^4.0.0",
-    "openai": "^4.58.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "mongoose": "^7.8.8",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.13"
+    "openai": "^4.104.0"
+  },
+  "devDependencies": {
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
