Repo cleanup: move backups/disabled files to legacy and simplify backend tsconfig

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -15,34 +15,14 @@
   "include": [
     "src/server.ts",
     "src/app.ts",
-    "src/config/**/*",
-    "src/models/Fixture.ts",
-    "src/models/Prediction.ts",
-    "src/models/FeaturedSelection.ts",
-    "src/services/**/*",
-    "src/routes/goldenBets.ts",
-    "src/routes/valueBets.ts",
-    "src/routes/betBuilder.ts",
-    "src/routes/admin.ts",
-    "src/cron/**/*"
+    "src/config/**/*.ts",
+    "src/models/**/*.ts",
+    "src/routes/**/*.ts",
+    "src/services/**/*.ts",
+    "src/cron/**/*.ts",
+    "src/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "dist",
-    "src/routes/liveFixtures.ts",
-    "src/routes/notifications.ts",
-    "src/routes/fixtureDetails.ts",
-    "src/routes/bettingInsights.ts",
-    "src/routes/stats.ts",
-    "src/models/BetBuilder.ts",
-    "src/services/liveScoresService.ts",
-    "src/services/notificationService.ts",
-    "src/services/fixtureStorageService.ts",
-    "src/services/bettingInsightsService.ts",
-    "src/services/betBuilderOfTheDayService.ts",
-    "src/services/betBuilderService.ts",
-    "src/services/trebleService.ts",
-    "src/cron/liveScoresCron.ts",
-    "src/cron/mlCron.ts"
+    "src/legacy/**/*"
   ]
 }
