Add weather API configuration to environment variables

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -8,7 +8,12 @@ API_FOOTBALL_BASE_URL=https://v3.football.api-sports.io
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4
+OPENAI_MODEL=chatgpt-4o-latest
+
+# Weather API Configuration (Optional - enhances AI reasoning)
+# Get free API key from: https://openweathermap.org/api
+# Free tier: 1000 calls/day, 5-day forecast
+OPENWEATHER_API_KEY=your_openweather_api_key_here
 
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/footy-oracle
