--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,28 +1,17 @@
 ﻿{
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "lib": ["ES2022"],
-    "rootDir": "./src",
-    "outDir": "./dist",
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": false,
-    "esModuleInterop": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "noEmitOnError": false
   },
-  "include": [
-    "src/server.ts",
-    "src/app.ts",
-    "src/config/**/*.ts",
-    "src/models/**/*.ts",
-    "src/routes/**/*.ts",
-    "src/services/**/*.ts",
-    "src/cron/**/*.ts",
-    "src/types/**/*.ts"
-  ],
-  "exclude": [
-    "src/legacy/**/*"
+  "files": [
+    "src/server.ts"
   ]
 }
