Fix Render build command

--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
 
     rootDir: ./apps/backend
 
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm start
 
     healthCheckPath: /health
