--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -11,7 +11,10 @@
     "resolveJsonModule": true,
     "noEmitOnError": false
   },
-  "files": [
-    "src/server.ts"
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
