--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -9,12 +9,25 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "noEmitOnError": false
+    "noEmitOnError": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/cron/liveScoresCron.ts",
+    "src/cron/mlCron.ts",
+    "src/routes/bettingInsights.ts",
+    "src/routes/notifications.ts",
+    "src/services/betBuilderOfTheDayService.ts",
+    "src/services/betBuilderService.ts",
+    "src/services/fetchAndNormalizeOdds.ts",
+    "src/services/liveScoresService.ts",
+    "src/services/mlIntegrationService.ts",
+    "src/services/notificationService.ts",
+    "src/services/trebleService.ts"
   ]
 }
